fixed markers on safari (have to use prop instead of hasClass; also ! in front of selector)

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -397,22 +397,29 @@ html, body, main, .mdl-layout__content, .page-content, #map {
     }
 
     img{
-      position: relative;
+
       width: 50px;
       height: 100%;
-      
+      display: inline;
+
+
     }
 
     h1.headHover{
       position: relative;
-      left: 52px;
-      font-size: 14px;
+      display: inline-block;
       margin: 0px;
-      margin-bottom: 20px;
+      top:0px;
+      width: 150px;
+      font-size: 14px;
 
     }
     p.paraHover{
+      position: relative;
+      display: inline-block;
       font-size: 12px;
+      width: 150px;
       margin: 0px;
+      left: 50px;
 
     }
